k8s-manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-service
spec:
  type: LoadBalancer # זה השינוי שיגרום ל-AWS לתת לך כתובת חיצונית
  selector:
    app: hello-k8s
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hello.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-k8s-service
            port:
              number: 80
